src/main/default/objects/Account/fields/PrimaryCallDay__c.field-meta.xml
<CustomField>
    <fullName>PrimaryCallDay__c</fullName>
    <formula>CASE( LEFT(RIGHT( PrimaryGridNumber__c ,3),2), 
    &quot;MO&quot;, &quot;Monday&quot;, 
    &quot;TU&quot;, &quot;Tuesday&quot;, 
    &quot;WE&quot;, &quot;Wednesday&quot;, 
    &quot;TH&quot;, &quot;Thursday&quot;, 
    &quot;FR&quot;, &quot;Friday&quot;, 
    &quot;Error&quot;)</formula>
    <label>Primary Call Day</label>
    <type>Text</type>
</CustomField>