src/main/default/objects/Account/fields/PrimaryCallDayHidden__c.field-meta.xml
<CustomField>
    <fullName>PrimaryCallDayHidden__c</fullName>
    <formula>CASE( LEFT(RIGHT( PrimaryGridNumber__c ,3),2),
&quot;MO&quot;, 1,
&quot;TU&quot;, 2,
&quot;WE&quot;, 3,
&quot;TH&quot;, 4,
&quot;FR&quot;, 5,
0)</formula>
    <label>Primary Call Day Hidden</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>