src/main/default/objects/Account/fields/PrimaryDeliveryDay__c.field-meta.xml
<CustomField>
    <fullName>PrimaryDeliveryDay__c</fullName>
    <label>Primary Delivery Day</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>WeekDays</valueSetName>
    </valueSet>
</CustomField>