src/main/default/objects/Account/fields/PrimaryGridNumber__c.field-meta.xml
<CustomField>
    <fullName>PrimaryGridNumber__c</fullName>
    <label>Primary Grid Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>