src/main/default/objects/Account/fields/PrimaryPaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>PrimaryPaymentMethod__c</fullName>
    <label>Primary Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Card Payment</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Buying Group Central Billing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>