src/main/default/objects/Account/fields/PrimaryRouteReference__c.field-meta.xml
<CustomField>
    <fullName>PrimaryRouteReference__c</fullName>
    <description>Extract Route Number from Primary Grid</description>
    <label>Primary Route Reference</label>
    <length>3</length>
    <type>Text</type>
</CustomField>