src/main/default/objects/Account/fields/PrimaryStartDate__c.field-meta.xml
<CustomField>
    <fullName>PrimaryStartDate__c</fullName>
    <label>Primary Start Date</label>
    <type>Date</type>
</CustomField>