src/main/default/objects/Account/fields/ProofOfDeliveryRequired__c.field-meta.xml
<CustomField>
    <fullName>ProofOfDeliveryRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Proof of Delivery Required?</label>
    <type>Checkbox</type>
</CustomField>