src/main/default/objects/Account/fields/RecordTypeName__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeName__c</fullName>
    <description>Field populated by flow on before insert and before update with name of record Type. Is used in filter for ParentId field.</description>
    <label>Record Type Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Outlet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>