src/main/default/objects/Account/fields/RTM__c.field-meta.xml
<CustomField>
    <fullName>RTM__c</fullName>
    <label>RTM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash&amp;Carry</fullName>
            </value>
            <value>
                <fullName>Barr Direct</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>