src/main/default/objects/Account/fields/RunningUserIsAssignedFieldSalesRep__c.field-meta.xml
<CustomField>
    <fullName>RunningUserIsAssignedFieldSalesRep__c</fullName>
    <formula>FieldSalesRepId__c == CASESAFEID($User.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Running User Is Assigned Field Sales Rep</label>
    <type>Checkbox</type>
</CustomField>