src/main/default/objects/Account/fields/SalesRepresentativeCode__c.field-meta.xml
<CustomField>
    <fullName>SalesRepresentativeCode__c</fullName>
    <formula>SalesRepresentative__r.EmployeeNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Representative Code</label>
    <type>Text</type>
</CustomField>