src/main/default/objects/Account/fields/SeasonalAccount__c.field-meta.xml
<CustomField>
    <fullName>SeasonalAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Seasonal Account</label>
    <type>Checkbox</type>
</CustomField>