src/main/default/objects/Account/fields/SeasonalEndDate__c.field-meta.xml
<CustomField>
    <fullName>SeasonalEndDate__c</fullName>
    <label>Seasonal End Date</label>
    <type>Date</type>
</CustomField>