src/main/default/objects/Account/fields/SeasonalStartDate__c.field-meta.xml
<CustomField>
    <fullName>SeasonalStartDate__c</fullName>
    <label>Seasonal Start Date</label>
    <type>Date</type>
</CustomField>