src/main/default/objects/Account/fields/SecondaryCallDay__c.field-meta.xml
<CustomField>
    <fullName>SecondaryCallDay__c</fullName>
    <label>Secondary Call Day</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>WeekDays</valueSetName>
    </valueSet>
</CustomField>