src/main/default/objects/Account/fields/SecondaryCallDayHidden__c.field-meta.xml
<CustomField>
    <fullName>SecondaryCallDayHidden__c</fullName>
    <formula>VALUE(TEXT( SecondaryCallDay__c ))</formula>
    <label>Secondary Call Day Hidden</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>