src/main/default/objects/Account/fields/SecondaryDeliveryDay__c.field-meta.xml
<CustomField>
    <fullName>SecondaryDeliveryDay__c</fullName>
    <label>Secondary Delivery Day</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>WeekDays</valueSetName>
    </valueSet>
</CustomField>