src/main/default/objects/Account/fields/SecondaryGridNumber__c.field-meta.xml
<CustomField>
    <fullName>SecondaryGridNumber__c</fullName>
    <label>Secondary Grid Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>