src/main/default/objects/Account/fields/SecondaryRouteReference__c.field-meta.xml
<CustomField>
    <fullName>SecondaryRouteReference__c</fullName>
    <description>Extract Route Number from Secondary Grid</description>
    <label>Secondary Route Reference</label>
    <length>3</length>
    <type>Text</type>
</CustomField>