src/main/default/objects/Account/fields/SecondaryStartDate__c.field-meta.xml
<CustomField>
    <fullName>SecondaryStartDate__c</fullName>
    <label>Secondary Start Date</label>
    <type>Date</type>
</CustomField>