src/main/default/objects/Account/fields/SeparateLoad__c.field-meta.xml
<CustomField>
    <fullName>SeparateLoad__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Separate Load</label>
    <type>Checkbox</type>
</CustomField>