src/main/default/objects/Account/fields/SupplierRef__c.field-meta.xml
<CustomField>
    <fullName>SupplierRef__c</fullName>
    <label>Supplier Ref</label>
    <length>50</length>
    <type>Text</type>
</CustomField>