src/main/default/objects/Account/fields/Symbol__c.field-meta.xml
<CustomField>
    <fullName>Symbol__c</fullName>
    <label>Symbol</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Best In</fullName>
            </value>
            <value>
                <fullName>Budgens</fullName>
            </value>
            <value>
                <fullName>Costcutter</fullName>
            </value>
            <value>
                <fullName>Day-Today</fullName>
            </value>
            <value>
                <fullName>Go Local</fullName>
            </value>
            <value>
                <fullName>Independent Outlet</fullName>
            </value>
            <value>
                <fullName>Keystore</fullName>
            </value>
            <value>
                <fullName>Londis</fullName>
            </value>
            <value>
                <fullName>McColls</fullName>
            </value>
            <value>
                <fullName>NISA</fullName>
            </value>
            <value>
                <fullName>One-O-One</fullName>
            </value>
            <value>
                <fullName>Other (Detail)</fullName>
            </value>
            <value>
                <fullName>Premier</fullName>
            </value>
            <value>
                <fullName>Spar</fullName>
            </value>
            <value>
                <fullName>Unitas Buying Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>