src/main/default/objects/Account/fields/TAMCode__c.field-meta.xml
<CustomField>
    <fullName>TAMCode__c</fullName>
    <inlineHelpText>Informative pick list only, no impact on sharing or functionality. System used and based data are in the Owning TAM  Field.</inlineHelpText>
    <label>TAM Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CORE01</fullName>
            </value>
            <value>
                <fullName>CORE02</fullName>
            </value>
            <value>
                <fullName>CORE03</fullName>
            </value>
            <value>
                <fullName>CORE04</fullName>
            </value>
            <value>
                <fullName>CORE05</fullName>
            </value>
            <value>
                <fullName>CORE06</fullName>
            </value>
            <value>
                <fullName>CORE07</fullName>
            </value>
            <value>
                <fullName>CORE08</fullName>
            </value>
            <value>
                <fullName>CORE09</fullName>
            </value>
            <value>
                <fullName>CORE10</fullName>
            </value>
            <value>
                <fullName>CORE11</fullName>
            </value>
            <value>
                <fullName>CORE12</fullName>
            </value>
            <value>
                <fullName>CORE13</fullName>
            </value>
            <value>
                <fullName>CORE14</fullName>
            </value>
            <value>
                <fullName>CORE15</fullName>
            </value>
            <value>
                <fullName>CORE16</fullName>
            </value>
            <value>
                <fullName>CORE17</fullName>
            </value>
            <value>
                <fullName>CORE18</fullName>
            </value>
            <value>
                <fullName>CORE19</fullName>
            </value>
            <value>
                <fullName>CORE20</fullName>
            </value>
            <value>
                <fullName>CORE21</fullName>
            </value>
            <value>
                <fullName>CORE22</fullName>
            </value>
            <value>
                <fullName>CORE23</fullName>
            </value>
            <value>
                <fullName>CORE24</fullName>
            </value>
            <value>
                <fullName>CORE25</fullName>
            </value>
            <value>
                <fullName>CORE26</fullName>
            </value>
            <value>
                <fullName>CORE27</fullName>
            </value>
            <value>
                <fullName>CORE28</fullName>
            </value>
            <value>
                <fullName>CORE29</fullName>
            </value>
            <value>
                <fullName>CORE30</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>