src/main/default/objects/Account/fields/TotalAGBarrTurnover__c.field-meta.xml
<CustomField>
    <fullName>TotalAGBarrTurnover__c</fullName>
    <description>The Annual Spend by the account on AG Barr products</description>
    <inlineHelpText>Enter the Annual Spend by the account on AG Barr products</inlineHelpText>
    <label>Total AG Barr Turnover</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1. Over £20k</fullName>
            </value>
            <value>
                <fullName>2. £15k - £20k</fullName>
            </value>
            <value>
                <fullName>3. £10k - £15k</fullName>
            </value>
            <value>
                <fullName>4. £7k - £10k</fullName>
            </value>
            <value>
                <fullName>5. £5k - £10k</fullName>
            </value>
            <value>
                <fullName>6. £4k - £5k</fullName>
            </value>
            <value>
                <fullName>7. £3k- £4k</fullName>
            </value>
            <value>
                <fullName>8. £2k - £3k</fullName>
            </value>
            <value>
                <fullName>9. £1k - £2k</fullName>
            </value>
            <value>
                <fullName>10. Less than £1k</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>