src/main/default/objects/Account/fields/TotalAmountOpenInvoices__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountOpenInvoices__c</fullName>
    <inlineHelpText>Stores the total amount of open invoices counting against the available credit.</inlineHelpText>
    <label>Total Amount Open Invoices</label>
    <summarizedField>aforza__Invoice__c.Gross__c</summarizedField>
    <summaryFilterItems>
        <field>aforza__Invoice__c.aforza__Status__c</field>
        <operation>equals</operation>
        <value>Payment Attempt Unsuccessful, Approved for Payment, Outstanding, Pending</value>
    </summaryFilterItems>
    <summaryForeignKey>aforza__Invoice__c.aforza__Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>