src/main/default/objects/Account/fields/TotalAmountOpenInvoicesCustomer__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountOpenInvoicesCustomer__c</fullName>
    <label>Total Amount Open Invoices (Customer)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>