src/main/default/objects/Account/fields/TotalAmountOpenOrders__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountOpenOrders__c</fullName>
    <description>Stores the total amount of open orders counting against the available credit. Used to define a declarative rollup summary field.</description>
    <label>Total Amount Open Orders</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>