src/main/default/objects/Account/fields/TotalAmountOpenOrdersCustomer__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountOpenOrdersCustomer__c</fullName>
    <label>Total Amount Open Orders (Customer)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>