src/main/default/objects/Account/fields/TotalSoftDrinkTurnover__c.field-meta.xml
<CustomField>
    <fullName>TotalSoftDrinkTurnover__c</fullName>
    <description>The Total Annual Soft Drink turnover of the store</description>
    <inlineHelpText>Enter the total Annual Soft Drink turnover of the store</inlineHelpText>
    <label>Total Soft Drink Turnover £</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1. Over £200k</fullName>
            </value>
            <value>
                <fullName>2. £170k - £200k</fullName>
            </value>
            <value>
                <fullName>3. £140k - £170k</fullName>
            </value>
            <value>
                <fullName>4. £115k - £140k</fullName>
            </value>
            <value>
                <fullName>5. £90k - £115k</fullName>
            </value>
            <value>
                <fullName>6. £70k - £90k</fullName>
            </value>
            <value>
                <fullName>7. £55k- £70k</fullName>
            </value>
            <value>
                <fullName>8. £40k - £55k</fullName>
            </value>
            <value>
                <fullName>9. £25k - £40k</fullName>
            </value>
            <value>
                <fullName>10. Less than £25k</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>