src/main/default/objects/Account/fields/TradingFrequency__c.field-meta.xml
<CustomField>
    <fullName>TradingFrequency__c</fullName>
    <formula>FLOOR((TODAY()- LastOrderDate__c)/7)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trading Frequency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>