src/main/default/objects/Account/fields/TradingFrequencyBucketed__c.field-meta.xml
<CustomField>
    <fullName>TradingFrequencyBucketed__c</fullName>
    <description>Used for filtering based on buckets. Created field so that we can use dynamic filtering component.</description>
    <formula>CASE(
    TradingFrequency__c,
				0, &apos;0-4&apos;,
				1, &apos;0-4&apos;,
				2, &apos;0-4&apos;,
				3, &apos;0-4&apos;,
				4, &apos;0-4&apos;,
				5, &apos;5-9&apos;,
				6, &apos;5-9&apos;,
				7, &apos;5-9&apos;,
				8, &apos;5-9&apos;,
				9, &apos;5-9&apos;,
				10, &apos;10-13&apos;,
				11, &apos;10-13&apos;,
				12, &apos;10-13&apos;,
				13, &apos;10-13&apos;,
				14, &apos;14-20&apos;,
				15, &apos;14-20&apos;,
				16, &apos;14-20&apos;,
				17, &apos;14-20&apos;,
				18, &apos;14-20&apos;,
				19, &apos;14-20&apos;,
				20, &apos;14-20&apos;,
				&apos;20+&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trading Frequency Bucketed</label>
    <type>Text</type>
</CustomField>