src/main/default/objects/Account/fields/WeeksSinceLastOrder__c.field-meta.xml
<CustomField>
    <fullName>WeeksSinceLastOrder__c</fullName>
    <formula>FLOOR((TODAY()-LastOrderDate__c)/7)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weeks Since Last Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>