src/main/default/objects/Account/fields/WhatAreTheOutletRtm__c.field-meta.xml
<CustomField>
    <fullName>WhatAreTheOutletRtm__c</fullName>
    <label>What are the Outlet&apos;s RTM</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Barr Direct</fullName>
            </value>
            <value>
                <fullName>Bestway</fullName>
            </value>
            <value>
                <fullName>Other C&amp;C</fullName>
            </value>
            <value>
                <fullName>Delivered Wholesaler</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>