src/main/default/objects/Account/fields/X4DigitPostalDistrict__c.field-meta.xml
<CustomField>
    <fullName>X4DigitPostalDistrict__c</fullName>
    <formula>LEFT( ShippingPostalCode , 4)</formula>
    <label>4 Digit Postal District</label>
    <type>Text</type>
</CustomField>