src/main/default/objects/Account/recordTypes/aforza__Business.recordType-meta.xml
<RecordType>
    <fullName>aforza__Business</fullName>
    <active>false</active>
    <label>Business</label>
</RecordType>