src/main/default/objects/Account/recordTypes/aforza__Buying_Group.recordType-meta.xml
<RecordType>
    <fullName>aforza__Buying_Group</fullName>
    <active>false</active>
    <label>Buying Group</label>
</RecordType>