src/main/default/objects/Account/recordTypes/aforza__Distributor.recordType-meta.xml
<RecordType>
    <fullName>aforza__Distributor</fullName>
    <active>false</active>
    <label>Distributor</label>
</RecordType>