src/main/default/objects/Account/recordTypes/aforza__Logistics_Provider.recordType-meta.xml
<RecordType>
    <fullName>aforza__Logistics_Provider</fullName>
    <active>false</active>
    <label>Logistics Provider</label>
</RecordType>