src/main/default/objects/Account/recordTypes/aforza__Outlet.recordType-meta.xml
<RecordType>
    <fullName>aforza__Outlet</fullName>
    <active>true</active>
    <label>Outlet</label>
</RecordType>