src/main/default/objects/Account/recordTypes/aforza__Producer.recordType-meta.xml
<RecordType>
    <fullName>aforza__Producer</fullName>
    <active>false</active>
    <label>Producer</label>
</RecordType>