src/main/default/objects/Account/validationRules/EligibleForPerfectStoreOnlyWithState.validationRule-meta.xml
<ValidationRule>
    <fullName>EligibleForPerfectStoreOnlyWithState</fullName>
    <active>true</active>
    <description>To allow changes to eligible perfect store account only when shipping State is populated.</description>
    <errorConditionFormula>AND(
    ISBLANK(TEXT(ShippingStateCode)),
				ISCHANGED(PerfectStoreScoreEligible__c),
				NOT($Permission.AllowMarkingEligibleForPerfectStore) 
)</errorConditionFormula>
    <errorDisplayField>PerfectStoreScoreEligible__c</errorDisplayField>
    <errorMessage>Before Changing Store Eligibility for Perfect Store, please populate Shipping State.</errorMessage>
</ValidationRule>