src/main/default/objects/Account/validationRules/InvalidUKPhoneNumber.validationRule-meta.xml
<ValidationRule>
    <fullName>InvalidUKPhoneNumber</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(
NOT(
REGEX(Phone, &quot;^\\+44[1-9]\\d{1,12}$&quot;)
)
,NOT ISBLANK(Phone))</errorConditionFormula>
    <errorMessage>Please enter a valid UK number starting with +44</errorMessage>
</ValidationRule>