src/main/default/objects/Account/validationRules/RestrictTelesalesCallTime.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictTelesalesCallTime</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
 PreferredCallTimeTelesales__c &lt; TIMEVALUE(&quot;6:00:00.000&quot;),
 PreferredCallTimeTelesales__c &gt; TIMEVALUE(&quot;19:30:00.000&quot;) )</errorConditionFormula>
    <errorMessage>Please select a time for Preferred Call Time that is between 6:00am - 7:30pm to update this record</errorMessage>
</ValidationRule>