src/main/default/objects/Account/validationRules/RestrictVisitTime.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictVisitTime</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
 PreferredVisitTime__c &lt; TIMEVALUE(&quot;9:00:00.000&quot;),
 PreferredVisitTime__c &gt; TIMEVALUE(&quot;17:00:00.000&quot;) )</errorConditionFormula>
    <errorMessage>Please select a time for Preferred Visit Time that is between 9:00am - 5:00pm to update this record</errorMessage>
</ValidationRule>