src/main/default/objects/Account/listViews/AccountsWithoutTradingActivity.listView-meta.xml
<ListView>
    <fullName>AccountsWithoutTradingActivity</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>DeliveryPointReference__c</columns>
    <columns>PARENT_NAME</columns>
    <columns>AccountStatus__c</columns>
    <columns>WeeksSinceLastOrder__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AccountStatus__c</field>
        <operation>equals</operation>
        <value>At Risk,Win Back,Lapsed</value>
    </filters>
    <label>Accounts Without Trading Activity</label>
</ListView>