src/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>AccountStatus__c</columns>
    <columns>Depot__c</columns>
    <columns>PrimaryCallDay__c</columns>
    <columns>PrimaryGridNumber__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Accounts</label>
</ListView>