src/main/default/objects/Account/listViews/Org_Account_Hierarchy.listView-meta.xml
<ListView>
    <fullName>Org_Account_Hierarchy</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>CallPriority__c</columns>
    <columns>aforza__Credit_Amount__c</columns>
    <columns>CreditStatus__c</columns>
    <columns>CustomerStatus__c</columns>
    <filterScope>Everything</filterScope>
    <label>Org_Account_Hierarchy</label>
</ListView>